<resources>
    <string name="app_name">covisor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app_message">Мониторинг сотрудников в связи
с ЧП по COVID-19 Monitoring of employees in connection
with emergency on COVID-19</string>
    <string name="title_description">Авторизация</string>
    <string name="login_hint_message">Логин</string>
    <string name="password_hint_message">Пароль</string>
    <string name="enter_btn">Войти</string>
    <string name="attention_message_text">Внимание!
Пожалуйста не забывайте каждый день отмечать свою температуру, а так же не забывайте указывать имена людей с которыми вы контактировали.</string>
</resources>